# sdk-nrf

./: .clang-tidy  CODEOWNERS  coverage.info  sonar-project-nativeposix.properties  sonar-project.properties  west.yml
.cm/: gitstream.cm
.github/workflows/: cancel-previous.yml  clang-tidy-review-publish.yml  clang-tidy-review.yml  codecov.yml  docbuild.yml  native_posix_run.yml  rebase_to_ncs_main.yml  sanitizer_test.yml  sonarcloud-audio-app.yml  sonarcloud-native-posix-cmake-only.yml  sonarcloud-native-posix-zephyr-ci.yml  sonarcloud-native-posix.yml  sonarcloud-select-platforms.yml  sonarcloud-with-static-compile-database.yml  sonarcloud.yml  test_sonar_cloud.yml  unittest.yml
applications/asset_tracker_v2/: CMakeLists.txt  overlay-memfault.conf  prj.conf  sample.yaml
applications/asset_tracker_v2/boards/: nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay  thingy91_nrf9160_ns.overlay
applications/asset_tracker_v2/configuration/: debug.conf
applications/asset_tracker_v2/configuration/memfault/: memfault_metrics_heartbeat_config.def
applications/asset_tracker_v2/doc/: app_behavior.rst  asset_tracker_v2_description.rst  sensor_module.rst
applications/asset_tracker_v2/src/: main.c
applications/asset_tracker_v2/src/cloud/: aws_iot_integration.c  azure_iot_hub_integration.c  nrf_cloud_integration.c
applications/asset_tracker_v2/src/cloud/cloud_codec/lwm2m/: lwm2m_codec_helpers.c
applications/asset_tracker_v2/src/cloud/lwm2m_integration/: lwm2m_integration.c
applications/asset_tracker_v2/src/events/: Kconfig  app_module_event.c  debug_module_event.h  gps_module_event.h
applications/asset_tracker_v2/src/ext_sensors/: ext_sensors.h
applications/asset_tracker_v2/src/modules/: CMakeLists.txt  Kconfig.cloud_module  Kconfig.debug_module  cloud_module.c  data_module.c  debug_module.c  gnss_module.c  gps_module.c  modem_module.c  modem_trace_uart.c  modem_trace_uart.h  modules_common.h
applications/asset_tracker_v2/src/watchdog/: watchdog.c  watchdog_app.h
applications/asset_tracker_v2/tests/data_module/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
applications/asset_tracker_v2/tests/data_module/src/: data_module_test.c
applications/asset_tracker_v2/tests/debug_module/: CMakeLists.txt  Kconfig  prj.conf  unity_cfg.yaml  unity_helper.c  unity_helper.h
applications/asset_tracker_v2/tests/debug_module/src/: debug_module_test.c
applications/asset_tracker_v2/tests/gnss_module/src/: gnss_module_test.c
applications/asset_tracker_v2/tests/lwm2m_codec_helpers/: CMakeLists.txt
applications/asset_tracker_v2/tests/lwm2m_integration/src/: lwm2m_integration_test.c
applications/connectivity_bridge/boards/: thingy91x_nrf5340_cpuapp.overlay  thingy91x_nrf5340_cpunet.conf
applications/connectivity_bridge/child_image/: hci_ipc.conf
applications/connectivity_bridge/src/modules/: ble_handler.c
applications/serial_lte_modem/doc/: slm_description.rst
boards/arm/thingy91x_nrf9151/: CMakeLists.txt  nrf5340_reset.c  thingy91x_nrf9151_common.dts
boards/arm/thingy91x_nrf9151/dts/bindings/: nordic,thingy91x-nrf5340-reset.yaml
boards/nordic/thingy91x/: thingy91x_nrf5340_cpuapp_common.dts
clang-tidy-result/: fixes.yml
doc/nrf/: links.txt  samples.rst
doc/nrf/drivers/: bme68x_iaq.rst
doc/nrf/libraries/modem/: nrf_modem_lib.rst
doc/nrf/migration/: migration_guide_2.3.0_to_2.4.0.rst
doc/nrf/releases/: release-notes-changelog.rst
doc/nrf/releases_and_maturity/releases/: release-notes-changelog.rst
doc/nrf/working_with_nrf/nrf91/: nrf9160.rst
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/bme68x/: bme68x_iaq.c
include/modem/: modem_trace.h
lib/lte_link_control/: lte_lc.c
lib/modem_trace/: modem_trace.c
lib/nrf_modem_lib/: CMakeLists.txt  Kconfig  Kconfig.modemlib  nrf_modem_lib_trace.c  nrf_modem_os.c  nrf_modem_os_trace.c  nrf_modem_trace.h
lib/nrf_modem_lib/shell/: modem_trace_memfault.c  modem_trace_memfault.h
lib/nrf_modem_lib/trace_backends/uart/: Kconfig
samples/bluetooth/direct_test_mode/src/: dtm.c  dtm.h  main.c  timing_consts.h
samples/bluetooth/hci_lpuart/boards/: thingy91x_nrf5340_cpuapp.overlay
samples/bluetooth/per_test_app/: CMakeLists.txt  Kconfig  prj.conf
samples/bluetooth/per_test_app/src/: main.c
samples/cellular/lte_ble_gateway/: README.rst
samples/cellular/lte_ble_gateway/boards/: thingy91x_nrf9151_ns.conf  thingy91x_nrf9151_ns.overlay
samples/debug/memfault/: README.rst
samples/net/download/boards/: nrf7002dk_nrf5340_cpuapp_ns.conf
samples/net/https_client/: README.rst  prj.conf  sample.yaml
samples/net/https_client/src/: main.c
samples/net/mqtt/doc/: description.rst
samples/nrf9160/gps/: CMakeLists.txt  prj.conf
samples/nrf9160/http_update/application_update/src/: main.c
samples/nrf9160/location/: README.rst
samples/nrf9160/lwm2m_carrier/: sample_description.rst
samples/nrf9160/lwm2m_carrier/src/: main.c
samples/nrf9160/modem_shell/: README.rst
samples/nrf9160/modem_shell/src/: main.c  shell.c
samples/nrf9160/modem_shell/src/uart/: uart.c  uart.h  uart_shell.c
samples/nrf9160/nrf_cloud_mqtt_multi_service/: README.rst
samples/nrf9160/udp/: README.rst
samples/peripheral/gpio_to_led/: prj.conf
samples/peripheral/gpio_to_led/src/: main.c
samples/sensor/bme68x/: README.rst
samples/sensor/bme68x_iaq/: README.rst
samples/sensor/bme68x_iaq/boards/: thingy53_nrf5340_cpuapp.conf
scripts/: quarantine.yaml  quarantine_downstream.yaml  quarantine_downstream_sanitizers.yaml
subsys/dfu/dfu_target/: Kconfig
subsys/dfu/dfu_target/src/: dfu_target_stream.c
subsys/net/lib/lwm2m_client_utils/lwm2m/: lwm2m_firmware.c
tests/lib/lte_lc_api/: CMakeLists.txt  prj.conf
tests/lib/lte_lc_api/src/: functions_to_mock.h  lte_lc_api_test.c
tests/lib/modem_trace/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/modem_trace/modem_trace_uart/src/: modem_trace_test.c
tests/lib/modem_trace/src/: modem_trace_test.c  modem_trace_test.h
tests/unity/: unity_cfg.yaml
